feat: Add remove genre route
